# lab

./: .cursorrules  .env.example  .gitignore  .roomodes  CLAUDE.md  COMMIT_CONVENTION.md  Dockerfile  MAP_PERFORMANCE_ANALYSIS.md  Makefile  OFFICIAL_PATTERN_EXAMPLE.html  QUICK_START.md  README.backend.md  README.md  SKILL.md  WORKING_2D_MAP_EXAMPLE.html  _routes.json  backend-migration.md  buf-api.gen.yaml  buf-frontend-connect.gen.yaml  buf-frontend-types.gen.yaml  buf-noconnect.gen.yaml  buf.gen.yaml  buf.yaml  conductor-run.sh  conductor-setup.sh  config.example.yaml  config.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  eslint.config.js  go.mod  go.sum  go.work  go.work.sum  index.html  layout-refactor.md  nginx.conf  notebook_runner.py  openapi-ts.config.ts  (+16 more)
backend/: .golangci.yml  CLAUDE.md  CURSOR.mdc  Dockerfile  README.md  config.example.yaml  config.yaml  go.mod  go.sum  pyproject.toml  requirements.txt
backend/lab/: __main__.py
backend/lab/core/: __init__.py  clickhouse.py  config.py  logger.py  module.py  runner.py  state.py  storage.py
backend/lab/ethereum/: __init__.py  manager.py  network.py  time.py
backend/lab/modules/: __init__.py
backend/lab/modules/beacon/: __init__.py  config.py  module.py
backend/pkg/api/: CLAUDE.md  CURSOR.mdc  config.go  gzip_middleware.go  lab_api_server.go  service.go
backend/pkg/cmd/: CLAUDE.md  CURSOR.mdc  main.go
backend/pkg/server/: CLAUDE.md  CURSOR.mdc  config.go  network_data_adapter.go  qualified_name.go  server.go
backend/pkg/xatuclickhouse/: CLAUDE.md  CURSOR.mdc  README.md
(+2637 files in other folders)
