[tool.poetry]
name = "lab"
version = "0.1.0"
description = "Lab Backend - Ethereum metrics collection and analysis"
authors = ["EthPandaOps"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
boto3 = "^1.34.34"
PyYAML = "^6.0.1"
aiohttp = "^3.9.3"
asyncio = "^3.4.3"
tenacity = "^8.2.3"
tinydb = "^4.8.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
sqlalchemy = "^2.0.25"
geonamescache = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
tenacity = "^8.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111", "C0103"] 